# math-parser

./: .gitignore  CMakeLists.txt  README.md
core/src/: CMakeLists.txt
core/test/: CMakeLists.txt  test.cpp
include/: expression.h  parser.h  print.h
include/parser/: derivative.h  parser.h  print.h
include/parser/parser/: expression.h  token.h
test/: CMakeLists.txt  test.cpp
